# curl-pad

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY_FIXES.md  curl.py  curl.sh  curlpad.py  curlpad.spec  pyproject.toml  requirements.txt
cloudflare/: .gitignore  README.md  worker.js  wrangler.toml
scripts/: build_curlpad.ps1  build_curlpad.sh  install_curlpad.ps1  install_curlpad.sh  mark-latest.sh  release.ps1  release.sh
src/curlpad/: MODULE_DOCUMENTATION.md  README.md  __init__.py  __main__.py  cli.py  commands.py  config.py  constants.py  dependencies.py  editor.py  history.py  output.py  templates.py  utils.py
