[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curlpad"
version = "1.3.2"
description = "A simple curl editor for the command line with Vim/Neovim autocomplete"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Akshat Kotpalliwar", email = "inquiry.akshatkotpalliwar@gmail.com"}
]
keywords = ["curl", "http", "cli", "editor", "vim", "neovim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.scripts]
curlpad = "curlpad.cli:main"

[tool.setuptools]
packages = ["curlpad"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
curlpad = ["py.typed"]

